import UTIL.TextUI;
import java.util.ArrayList;

public class PickList {
    public String date;
    private ArrayList<String> picklist;
    TextUI ui= new TextUI();

    /*
    (pickListDateSorting)
    kan sortere ordreud fra dato.
     */

    /* (pickListOutput (dato))
     methode som udskriver en pluklist
     */




}
